--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /CompanyManager/CompanyManager.ConApp/obj
 /CompanyManager/CompanyManager.Logic/bin/Debug/net8.0
 /CompanyManager/CompanyManager.Logic/obj
+/CompanyManager/.vs/ProjectEvaluation
