--- a/CompanyManager/CompanyManager.Logic/CompanyManager.Logic.csproj
+++ b/CompanyManager/CompanyManager.Logic/CompanyManager.Logic.csproj
@@ -6,4 +6,10 @@
                 <Nullable>enable</Nullable>
         </PropertyGroup>
 
+        <ItemGroup>
+          <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+          <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.1" />
+          <PackageReference Include="System.Linq.Dynamic.Core" Version="1.5.1" />
+        </ItemGroup>
+
 </Project>
