--- a/CompanyManager/CompanyManager.ConApp/CompanyManager.ConApp.csproj
+++ b/CompanyManager/CompanyManager.ConApp/CompanyManager.ConApp.csproj
@@ -10,6 +10,10 @@
         <ItemGroup>
           <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
           <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.1" />
+          <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          </PackageReference>
           <PackageReference Include="System.Linq.Dynamic.Core" Version="1.5.1" />
         </ItemGroup>
 
@@ -19,7 +23,7 @@
 
         <ItemGroup>
           <None Update="CompanyManager.db">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
           </None>
         </ItemGroup>
 
