--- a/CompanyManager/CompanyManager.Logic/CompanyManager.Logic.csproj
+++ b/CompanyManager/CompanyManager.Logic/CompanyManager.Logic.csproj
@@ -9,6 +9,10 @@
         <ItemGroup>
           <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
           <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.1" />
+          <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          </PackageReference>
           <PackageReference Include="System.Linq.Dynamic.Core" Version="1.5.1" />
         </ItemGroup>
 
