--- a/CompanyManager/CompanyManager.ConApp/CompanyManager.ConApp.csproj
+++ b/CompanyManager/CompanyManager.ConApp/CompanyManager.ConApp.csproj
@@ -23,7 +23,7 @@
 
         <ItemGroup>
           <None Update="CompanyManager.db">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
           </None>
         </ItemGroup>
 
